2008-12-25 Maximilien Cuony
    * 0.6.4 packed, and uploaded to the server !

2008-12-23 Maximilien Cuony
    * Manage signs
    * FS#4 !

2008-12-22 Maximilien Cuony
    * Keys list are sorted
    * Revoke keys
    * Manage users ids

2008-12-21 Maximilien Cuony
    * Delete and gen keys
    * Fx 3.1 support
    * FS#72
    * FS#114

2008-12-20 Maximilien Cuony
    * Trust system finished
    * Password change feature

2008-11-02 Maximilien Cuony
    * 0.6.3 packed, and uploaded to the server !
    * Key manager (not finished but ready for a release)
    * Translation of some elements

2008-10-30 Maximilien Cuony
	* FS#60
	* Continue key manager, key import

2008-10-29 Maximilien Cuony
	* Fix size problems for windows in options (50% of FS#143)
	* FS#144
	* FS#145
	* FS#149
	* FS#136 50%
    * Fix gmail problems
    * Base of key management, key import, servers communication
    * Typo (50% of FS#143)

2008-10-24 Maximilien Cuony
    * 0.6.2 packed, and uploaded to the server !
    * Adding Darvin files

2008-10-22 Maximilien Cuony
    * FS#138
    * Moving ipc to rights folders
    * FS#137
    * FS#135 (almost)
    * Adding x86_64 libs

2008-10-17 Maximilien Cuony
    * 0.6.1 packed, and uploaded to the server !
    * 0.6 packed, and uploaded to the server !

2008-10-11 Maximilien Cuony
    * Cleaning code.

2008-10-10 Maximilien Cuony
    * Removed all old system
    * Using ipc and removing old system in progress.

2008-09-29 Maximilien Cuony
    * 0.5.2 packed, and uploaded to the server !
    * Fix a problem with hu locate
    * FS#118
    * FS#116

2008-09-29 Maximilien Cuony
    * Fix problem with gmail

2008-09-08 Maximilien Cuony
    * FS#96
    * FS#99
    * FS#97
    * FS#109
    * FS#102, FS#107

2008-07-14 Maximilien Cuony
    * 0.5.1 packed, and uploaded to the server !
    * Locates updated

2008-07-11 Maximilien Cuony
    * FS#75
    * XpCom disabled.
    * FS#91
    * New locates (hu and no)
    * New decrypt comportement (first try widout pass)