@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <RDF:RDF xmlns:em="http://www.mozilla.org/2004/em-rdf#"
          xmlns:NC="http://home.netscape.com/NC-rdf#"
-         xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
+         xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#"><!--em:id="{ec8030f7-c20a-464f-9b0e-13a3a9e97384}"-->
   <RDF:Description RDF:about="rdf:#$g5s0x"
-                   em:id="{ec8030f7-c20a-464f-9b0e-13a3a9e97384}"
+
+                   em:id="toolkit@mozilla.org"
                    em:minVersion="1.5"
                    em:maxVersion="3.*" />
   <RDF:Description RDF:about="urn:mozilla:install-manifest"
